# CryptoForge

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  USAGE.md  tiny_crypto.h
config/: crypto_config.h  demo_config.h  libs.h  tiny_crypto.h
crypto/aead/aes/: aes_gcm.c
crypto/aead/chacha/: chacha20_poly1305.c  xchacha20_poly1305.c
crypto/cf_api/: cf_aead.c  cf_cipher.c  cf_enc.c  cf_hash.c  cf_kdf.c  cf_mac.c  cf_utils.c
crypto/cipher/aes/: aes_common.h  aes_core.c  aes_core.h  aes_modes.c  aes_modes.h  cbc_mode.c  cbc_mode.h  cfb_mode.c  cfb_mode.h  ctr_mode.c  ctr_mode.h  ecb_mode.c  ecb_mode.h  gcm_mode.c  gcm_mode.h  ofb_mode.c  ofb_mode.h
crypto/cipher/chacha/: chacha.c  chacha_core.c  xchacha.c  xchacha_core.c
crypto/enc/: base16.c  base16.h  base32.c  base32.h  base58.c  base58.h  base64.c  base64.h  base85.c  base85.h
crypto/evp/: evp_defs.h  evp_enc.c  evp_enc.h  evp_flags.h  evp_hash.c  evp_hash.h  evp_hmac.h  evp_kdf.c  evp_kdf.h  evp_mac.c  evp_mac.h  evp_status.h  evp_utils.c  evp_utils.h
crypto/hash/: hash_common.h
crypto/hash/md/: md5.c  md5.h
crypto/hash/sha/: sha1.c  sha1.h  sha256.c  sha256.h  sha512.c  sha512.h
crypto/kdf/: hkdf.c  hkdf.h  pbkdf2.c
crypto/mac/: cmac.c  cmac.h  ghash.c  ghash.h  gmac.c  gmac.h  hmac.c  hmac.h  kmac.c  kmac.h  poly1305.c
crypto/symmetric/aes/: aes_core.c  cbc_mode.c  ecb_mode.c
crypto/symmetric/chacha/: chacha.c  xchacha.c
demo/: cf_api_cipher_test.c  cf_api_kdf_test.c  cf_api_mac_test.c  cf_hash_api_test.c  cf_mac_api_test.c  demo_aead.c  demo_aes.c  demo_chacha.c  demo_cipher.c  demo_enc.c  demo_hash.c  demo_kdf.c  demo_mac.c  run_all_demos.c
include/: cf.h  crypto_config.h  demo_config.h  keccak.h  libs.h  sha1.h  sha2.h  sha3.h  sha_common.h  shake.h  utils.h
include/CryptoForge/: cf.h  cf_aead.h  cf_cipher.h  cf_defs.h  cf_enc.h  cf_exports.h  cf_flags.h  cf_hash.h  cf_kdf.h  cf_mac.h  cf_status.h  cf_utils.h
include/cf_api/: cf.h  cf_aead.h  cf_cipher.h  cf_defs.h  cf_enc.h  cf_flags.h  cf_hash.h  cf_kdf.h  cf_mac.h  cf_utils.h
include/config/: crypto_config.h  demo_config.h  libs.h
include/crypto/: aes_common.h  aes_core.h  aes_gcm.h  base16.h  base32.h  base58.h  base64.h  base85.h  cbc_mode.h  cfb_mode.h  chacha.h  chacha20_poly1305.h  chacha_core.h  cmac.h  ctr_mode.h  ecb_mode.h  gcm_mode.h  gmac.h  hash_common.h  hkdf.h  hmac.h  keccak.h  kmac.h  md5.h  ofb_mode.h  pbkdf2.h  poly1305.h  sha1.h  sha256.h  sha3.h  sha512.h  shake.h  xchacha.h  xchacha20_poly1305.h  xchacha_core.h
include/utils/: bitops.h  cf_status.h  mem.h  misc.h
resources/: CryptoForge.rc  cf_tests.rc
src/: CMakeLists.txt
src/CryptoForge/: CMakeLists.txt
src/CryptoForge/crypto/aead/aes/: aes_gcm.c
src/CryptoForge/crypto/aead/chacha/: chacha20_poly1305.c  xchacha20_poly1305.c
src/CryptoForge/crypto/cf_api/: cf_aead.c  cf_cipher.c  cf_enc.c  cf_hash.c  cf_kdf.c  cf_mac.c  cf_utils.c
src/CryptoForge/crypto/cipher/aes/: aes_core.c  cbc_mode.c
src/CryptoForge/crypto/cipher/chacha/: xchacha_core.c
src/CryptoForge/crypto/enc/: base85.c
src/CryptoForge/crypto/hash/md/: md5.c
src/CryptoForge/crypto/hash/sha/: sha1.c  sha256.c  sha512.c
src/CryptoForge/crypto/hash/sha/keccak/: keccak.c
src/CryptoForge/crypto/kdf/: pbkdf2.c
src/CryptoForge/crypto/mac/: cmac.c  hmac.c  kmac.c
src/CryptoForge/include/cf_api/: cf.h  cf_aead.h  cf_cipher.h  cf_defs.h  cf_enc.h  cf_flags.h  cf_hash.h  cf_kdf.h  cf_mac.h  cf_utils.h
src/CryptoForge/include/config/: crypto_config.h  test_config.h
src/CryptoForge/include/crypto/: ctr_mode.h  kmac.h  pbkdf2.h  poly1305.h  shake.h  xchacha_core.h
src/CryptoForge/include/utils/: cf_status.h  misc.h
src/CryptoForge/utils/: mem.c
src/crypto/aead/aes/: aes_gcm.c
src/crypto/aead/chacha/: chacha20_poly1305.c  xchacha20_poly1305.c
src/crypto/cf_api/: cf_aead.c  cf_cipher.c  cf_enc.c  cf_hash.c  cf_kdf.c  cf_mac.c  cf_utils.c
src/crypto/cipher/aes/: aes_core.c  cbc_mode.c  cfb_mode.c  ctr_mode.c  ecb_mode.c  ofb_mode.c
src/crypto/cipher/chacha/: chacha.c  chacha_core.c  xchacha.c  xchacha_core.c
src/crypto/enc/: base16.c  base32.c  base58.c  base64.c  base85.c
src/crypto/hash/md/: md5.c
src/crypto/hash/sha/: sha1.c  sha256.c  sha512.c
src/crypto/hash/sha/keccak/: keccak.c  sha3.c  shake.c
src/crypto/kdf/: hkdf.c  pbkdf2.c
src/crypto/mac/: cmac.c  gmac.c  hmac.c  kmac.c  poly1305.c
src/include/cf_api/: cf.h  cf_aead.h  cf_cipher.h  cf_flags.h  cf_hash.h  cf_kdf.h  cf_mac.h  cf_utils.h
src/include/config/: crypto_config.h  demo_config.h  test_config.h
src/include/crypto/: aes_gcm.h  base32.h  base58.h  cbc_mode.h  ecb_mode.h  hkdf.h  hmac.h  keccak.h  kmac.h  md5.h  ofb_mode.h  sha256.h  sha3.h
src/include/utils/: cf_status.h  misc.h
src/internal/config/: crypto_config.h  libs.h  test_config.h
src/internal/crypto/: base64.h  chacha.h  chacha20_poly1305.h  chacha_core.h  cmac.h  ctr_mode.h  gmac.h  hkdf.h  hmac.h  kmac.h  pbkdf2.h  poly1305.h  xchacha.h  xchacha20_poly1305.h
src/internal/utils/: misc.h
src/sha/: README_SHA.md  keccak.c  sha1.c  sha2.c  sha3.c  shake.c
src/utils/: mem.c
tests/: CMakeLists.txt  cf_tests.c  demo_sha.c  run_all_demos.c  run_all_tests.c
tests/smoke/: cf_api_aead_test.c  cf_api_cipher_test.c  cf_api_enc_test.c  cf_api_hash_test.c  cf_api_kdf_test.c  cf_api_mac_test.c
utils/: cf_status.h  mem.c  mem.h  mem_utils.h  misc_utils.h  tclib_status.h  utils.h
vectors/NIST/KAT/: tv_aes_cbc.h  tv_aes_cfb8.h  (+3 more)
vectors/wycheproof/: tv_aes_cbc_pkcs5.h  tv_aes_cmac.h  tv_aes_gcm.h  tv_aes_gmac.h  tv_chacha20_poly1305.h  tv_hkdf_sha1.h  tv_hkdf_sha256.h  tv_hkdf_sha384.h  tv_hkdf_sha512.h  tv_hmac_sha1.h  tv_hmac_sha224.h  tv_hmac_sha256.h  tv_hmac_sha384.h  tv_hmac_sha3_224.h  tv_hmac_sha3_256.h  tv_hmac_sha3_384.h  tv_hmac_sha3_512.h  tv_hmac_sha512.h  tv_hmac_sha512_224.h  tv_hmac_sha512_256.h  tv_kmac128_no_customization.h  tv_kmac256_no_customization.h  tv_pbkdf2_hmac_sha1.h  tv_pbkdf2_hmac_sha224.h  tv_pbkdf2_hmac_sha256.h  tv_pbkdf2_hmac_sha384.h  tv_pbkdf2_hmac_sha512.h  tv_xchacha20_poly1305.h
(+6 files in other folders)
